--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,19 @@ node_modules
 dist
 dist-ssr
 *.local
+.env.local
+.env.*.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+Thumbs.db
+coverage/
+*.tsbuildinfo
